--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Блины и Блинчики</title>
 <body>
 	<header>
-        <h1><img src="Group 1.svg">Блины</h1>
+        <h1><img src="Group 1.svg" width="20px" height="20px">Блины</h1>
         <p>это наш сайт где ты можешь <a href="#price">заказать</a> блинчики</p>
         <img scr="velikiy.jpg">
     </header>
