--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <title>Блины и Блинчики</title>
 <body>
 	<header>
-        <h1><img src="Group 1.svg" width="20px" height="20px">Блины</h1>
+        <h1 style="color:red"><img src="Group 1.svg" width="20px" height="20px">Блины</h1>
         <p>это наш сайт где ты можешь <a href="#price">заказать</a> блинчики</p>
         <img scr="velikiy.jpg">
     </header>
     <main>
-        <h2>Наши блины</h2>
+        <h2 style="color:red">Наши блины</h2>
         <p>У нас есть много разных блинов. Например, если блины с рыбой,мясом или икрой. Также у нас есть блинчики и для вегетерианцев:с салатом, с овощами, или с морской капустой. И всё это не более 299 рублей!</p>
-        <h2 id="price">Цены</h2>
+        <h2 id="price"  style="color:red">Цены</h2>
         <table style="border:1px solid green">
             <tr>
                 <td style="border:1px solid green">Блины\цена</td>
@@ -56,7 +56,7 @@
         </table>
     </main>
     <footer>
-        <h2>Контакты</h2>
+        <h2 style="color:red">Контакты</h2>
         <p>номер телефона: +088961238621734528914651328651256</p>
         <p>эл. почта:asdasdasadasda@asdadada.gnom</p>
     </footer>
