--- a/index.html
+++ b/index.html
@@ -1,64 +1,64 @@
 <html>
 <title>Блины и Блинчики</title>
-<body>
+<body style="background-color:black">
 	<header>
         <h1 style="color:red"><img src="Group 1.svg" width="20px" height="20px">Блины</h1>
-        <p>это наш сайт где ты можешь <a href="#price">заказать</a> блинчики</p>
+        <p style="color:yellow">это наш сайт где ты можешь <a href="#price">заказать</a> блинчики</p>
         <img scr="velikiy.jpg">
     </header>
     <main>
         <h2 style="color:red">Наши блины</h2>
-        <p>У нас есть много разных блинов. Например, если блины с рыбой,мясом или икрой. Также у нас есть блинчики и для вегетерианцев:с салатом, с овощами, или с морской капустой. И всё это не более 299 рублей!</p>
+        <p style="color:yellow">У нас есть много разных блинов. Например, если блины с рыбой,мясом или икрой. Также у нас есть блинчики и для вегетерианцев:с салатом, с овощами, или с морской капустой. И всё это не более 299 рублей!</p>
         <h2 id="price"  style="color:red">Цены</h2>
         <table style="border:1px solid green">
             <tr>
-                <td style="border:1px solid green">Блины\цена</td>
-                <td style="border:1px solid green">маленький</td>
-                <td style="border:1px solid green">средний</td>
-                <td style="border:1px solid green">большой</td>
+                <td style="color:yellow;border:1px solid green">Блины\цена</td>
+                <td style="color:yellow;border:1px solid green">маленький</td>
+                <td style="color:yellow;border:1px solid green">средний</td>
+                <td style="color:yellow;border:1px solid green">большой</td>
             </tr>
             <tr>
-                <td style="border:1px solid green">с рыбой</td>
-                <td style="border:1px solid green">79 руб.</td>
-                <td style="border:1px solid green">149 руб.</td>
-                <td style="border:1px solid green">199 руб.</td>
+                <td style="color:yellow;border:1px solid green">с рыбой</td>
+                <td style="color:yellow;border:1px solid green">79 руб.</td>
+                <td style="color:yellow;border:1px solid green">149 руб.</td>
+                <td style="color:yellow;border:1px solid green">199 руб.</td>
             </tr>
             <tr>
-                <td style="border:1px solid green">с мясом</td>
-                <td style="border:1px solid green">89 руб.</td>
-                <td style="border:1px solid green">159 руб.</td>
-                <td style="border:1px solid green">199 руб.</td>
+                <td style="color:yellow;border:1px solid green">с мясом</td>
+                <td style="color:yellow;border:1px solid green">89 руб.</td>
+                <td style="color:yellow;border:1px solid green">159 руб.</td>
+                <td style="color:yellow;border:1px solid green">199 руб.</td>
             </tr>
             <tr>
-                <td style="border:1px solid green">с икрой</td>
-                <td style="border:1px solid green">99 руб.</td>
-                <td style="border:1px solid green">199 руб.</td>
-                <td style="border:1px solid green">299 руб.</td>
+                <td style="color:yellow;border:1px solid green">с икрой</td>
+                <td style="color:yellow;border:1px solid green">99 руб.</td>
+                <td style="color:yellow;border:1px solid green">199 руб.</td>
+                <td style="color:yellow;border:1px solid green">299 руб.</td>
             </tr>
             <tr>
-                <td style="border:1px solid green">с салатом</td>
-                <td style="border:1px solid green">69 руб.</td>
-                <td style="border:1px solid green">139 руб.</td>
-                <td style="border:1px solid green">219 руб.</td>
+                <td style="color:yellow;border:1px solid green">с салатом</td>
+                <td style="color:yellow;border:1px solid green">69 руб.</td>
+                <td style="color:yellow;border:1px solid green">139 руб.</td>
+                <td style="color:yellow;border:1px solid green">219 руб.</td>
             </tr>
             <tr>
-                <td style="border:1px solid green">с овощами</td>
-                <td style="border:1px solid green">59 руб.</td>
-                <td style="border:1px solid green">129 руб.</td>
-                <td style="border:1px solid green">199 руб.</td>
+                <td style="color:yellow;border:1px solid green">с овощами</td>
+                <td style="color:yellow;border:1px solid green">59 руб.</td>
+                <td style="color:yellow;border:1px solid green">129 руб.</td>
+                <td style="color:yellow;border:1px solid green">199 руб.</td>
             </tr>
             <tr>
-                <td style="border:1px solid green">с морской капустой</td>
-                <td style="border:1px solid green">89 руб.</td>
-                <td style="border:1px solid green">189 руб.</td>
-                <td style="border:1px solid green">249 руб.</td>
+                <td style="color:yellow;border:1px solid green">с морской капустой</td>
+                <td style="color:yellow;border:1px solid green">89 руб.</td>
+                <td style="color:yellow;border:1px solid green">189 руб.</td>
+                <td style="color:yellow;border:1px solid green">249 руб.</td>
             </tr>
         </table>
     </main>
     <footer>
         <h2 style="color:red">Контакты</h2>
-        <p>номер телефона: +088961238621734528914651328651256</p>
-        <p>эл. почта:asdasdasadasda@asdadada.gnom</p>
+        <p style="color:yellow">номер телефона: +088961238621734528914651328651256</p>
+        <p style="color:yellow">эл. почта:asdasdasadasda@asdadada.gnom</p>
     </footer>
 </body>
 
